Update crime collection usage

--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -47,7 +47,7 @@ title: "Crime in England and Wales: year ending December 2017 collection"
         <div class="col release-data">
 
             <p class="font-xsmall">
-            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">View previous releases</a>
+            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">View previous crime collections</a>
         </div>
 
       </div>
@@ -60,7 +60,7 @@ title: "Crime in England and Wales: year ending December 2017 collection"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 class="margin-top--3">Summary pages in this release</h2>
+          <h2 class="margin-top--3">Summary pages in this collection</h2>
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></p>
@@ -84,41 +84,8 @@ title: "Crime in England and Wales: year ending December 2017 collection"
               </li>
             </ul>
 
-            <!-- <h2 class="margin-top--7">Datasets used in this release</h2>
-            <ul class="list--neutral margin-top--4 padding-left--0">
-              <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Additional tables on Fraud and Cybercrime</a></p>
-                <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
-                <p>Estimates from Crime Survey for England and Wales (CSEW) on fraud and computer misuse.</p>
-              </li>
-              <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Appendix Tables</a></p>
-                <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
-                <p>Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to15 and Home Office police recorded crime, by offence type.</p>
-              </li>
-              <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Additional tables on Fraud and Cybercrime</a></p>
-                <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
-                <p>Estimates from Crime Survey for England and Wales (CSEW) on fraud and computer misuse.</p>
-              </li>
-              <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Appendix Tables</a></p>
-                <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
-                <p>Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to15 and Home Office police recorded crime, by offence type.</p>
-              </li>
-            </ul> -->
-
-            <h2 class="margin-top--7">Summary tables in this release</h2>
-            <ul class="list--neutral margin-top--4 padding-left--0">
-              <li class="margin-bottom--6">
-                <p class="margin-bottom--1"><a class="heading-small" href="../summary-table">Summary table page title</a></p>
-                <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Ad in excepteur eu elit deserunt incididunt est quis ex sint enim cillum Lorem aliqua ut laboris pariatur id.</p>
-              </li>
-            </ul>
-
             <div class="content-box icon-box margin-top--7">
-              <i class="icon icon-pdf--dark"></i><p><a href="#">Download the whole collection</a></p>
+              <i class="icon icon-pdf--dark"></i><p><a href="#">Download all pages in crime collection</a></p>
             </div>
 
         </div>
