--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -18,7 +18,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../collection">Release page</a>
+                  <a class="breadcrumb__link astral-link" href="../collection">Crime collection</a>
                 </li>
                 <li class="breadcrumb__item">
                   Violent Crime in England and Wales
