Make columns one third and two thirds

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -128,7 +128,7 @@ title: "Fraud in England and Wales: year ending December 2017"
             </ul>
           </div>
         </div>
-
+        <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
           <h2 id="main-findings" class="margin-top--3">Main findings for fraud</h2>
@@ -220,7 +220,6 @@ title: "Fraud in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -251,7 +250,6 @@ title: "Fraud in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -266,7 +264,6 @@ title: "Fraud in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -284,6 +281,7 @@ title: "Fraud in England and Wales: year ending December 2017"
             </div>
           </div>
 
+          <!-- snapshots -->
           <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
           <div class="flex-grid">
             <div class="flex-col background--gallery border--gallery">
@@ -323,8 +321,8 @@ title: "Fraud in England and Wales: year ending December 2017"
               </div>
             </div>
           </div>
-        <!-- snapshots -->
 
+          <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
             <p class="margin-top--4">Mark Bangs<br>
@@ -334,10 +332,8 @@ title: "Fraud in England and Wales: year ending December 2017"
           <p class="margin-top--7">
             <a href="#top">Back to top</a>
           </p>
-
         </div>
       </div>
     </div>
-        <!-- end of main wrapper -->
   </div>
 </main>
