--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -86,9 +86,52 @@ title: "Crime in England and Wales: year ending December 2017"
   <div class="padding-bottom--6">
     <div class="wrapper">
       <div class="col-wrap">
+        <!-- sticky nav -->
+        <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
+          <div class="">
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">More pages related to crime:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 id="main-findings" class="margin-top--7">Main findings for crime</h2>
+          <h2 id="main-findings" class="margin-top--3">Main findings for crime</h2>
           <p class="heading-small">Crime overall has fallen in the last year</p>
           <p>Crime estimated by Crime Survey for England and Wales (CSEW) shows crime overall has fallen in the last year,  driven by a 28% decline in computer misuse.</p>
           <p>Most individual types of crime, including violence, have stayed at levels similar to the previous year.</p>
@@ -148,8 +191,6 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -176,7 +217,6 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -191,9 +231,6 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-
-
-
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -211,65 +248,48 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-        <!-- end of first column -->
+          <!-- snapshots -->
+          <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
+          <div class="flex-grid">
 
-    <div class="wrapper">
-          <div class="col-wrap">
-            <div class="col">
-              <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
-
-            <div class="flex-grid">
-
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
-                  <p>No change in the volume of fraud offences in the last year</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
               </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
-                  <p>Little change in levels of violent crime in recent years.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
+                <p>No change in the volume of fraud offences in the last year</p>
               </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/weapons_highlight_sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></h4>
-                  <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
               </div>
             </div>
-
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
+              </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
+                <p>Little change in levels of violent crime in recent years.</p>
+              </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
+              </div>
+            </div>
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/weapons_highlight_sm.png" | relative_url }}" class="" alt="">
+              </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></h4>
+                <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
+              </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- snapshots -->
-
-    <div class="wrapper">
-      <div class="col-wrap">
-        <div class="col col--md-two-thirds col--lg-two-thirds">
-
+          <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
             <p class="margin-top--4">Mark Bangs<br>
@@ -282,9 +302,5 @@ title: "Crime in England and Wales: year ending December 2017"
         </div>
       </div>
     </div>
-        <!-- end of main wrapper -->
-
-
-
   </div>
 </main>
