--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -86,9 +86,52 @@ title: "Violent Crime in England and Wales: year ending December 2017"
   <div class="padding-bottom--6">
     <div class="wrapper">
       <div class="col-wrap">
+        <!-- sticky nav -->
+        <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
+          <div class="">
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">More pages related to crime:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 id="main-findings" class="margin-top--7">Main findings for violent crime</h2>
+          <h2 id="main-findings" class="margin-top--3">Main findings for violent crime</h2>
           <p class="heading-small">The Crime Survey for England and Wales shows long-term reductions in violent crime but little change in recent years</p>
           <p>Around 2 in every 100 adults were a victim of CSEW violent crime in the latest survey year, compared with around 3 in 100 adults in the survey year ending March 2007 and 5 in 100 adults in 1995 (the peak year).</p>
           <p>However, in the year ending March 2017, the Crime Survey for England and Wales (CSEW) showed that more than half of violent crime victims (57%) did not report their experiences to the police. This is a return to levels seen preceding the year ending March 2013, following higher levels of reporting in the previous three years.</p>
@@ -204,17 +247,11 @@ title: "Violent Crime in England and Wales: year ending December 2017"
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-        <!-- end of first column -->
 
-    <div class="wrapper">
-          <div class="col-wrap">
-            <div class="col">
-              <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
 
-            <div class="flex-grid">
+          <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
+          <!-- snapshots -->
+          <div class="flex-grid">
               <div class="flex-col background--gallery border--gallery">
                 <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
                   <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
@@ -253,15 +290,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
               </div>
             </div>
 
-            </div>
-          </div>
-        </div>
-        <!-- snapshots -->
-
-    <div class="wrapper">
-      <div class="col-wrap">
-        <div class="col col--md-two-thirds col--lg-two-thirds">
-
+          <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
             <p class="margin-top--4">Mark Bangs<br>
@@ -274,9 +303,5 @@ title: "Violent Crime in England and Wales: year ending December 2017"
         </div>
       </div>
     </div>
-        <!-- end of main wrapper -->
-
-
-
   </div>
 </main>
