Update columns and sticky

--- a/patterns.html
+++ b/patterns.html
@@ -11,11 +11,11 @@ footer: false
 <div class="wrapper prototype">
   <div class="col-wrap" style="margin-bottom: 200px;">
 
-    <div class="col col--md-one-third col--lg-one-quarter sticky">
+    <div class="col col--md-one-third col--lg-one-third sticky">
           {% include sticky-nav.html %}
     </div>
 
-    <div class="col col--md-two-thirds col--lg-three-quarters">
+    <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Patterns</h1>
       <h2 id="accordian">Accordian</h2>
       {% include accordian.html %}
