Collection link and nav updates

--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -61,41 +61,13 @@ title: "Crime in England and Wales: year ending December 2017 collection"
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
           <div class="">
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Page contents:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#section-1">Key findings for weapons crime</a>
+                <a href="#section-1">Summary pages</a>
               </li>
               <li>
-                <a href="#section-2">Get the data</a>
-              </li>
-              <li>
-                <a href="#section-3">Find information about these statistics</a>
-              </li>
-              <li>
-                <a href="#section-4">Read more pages relating to crime</a>
-              </li>
-              <li>
-                <a href="#section-5">Contact us</a>
-              </li>
-            </ul>
-
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">More pages related to crime:</h2>
-            <ul class="section-contents">
-              <li>
-                <a href="#section-1">Key findings for weapons crime</a>
-              </li>
-              <li>
-                <a href="#section-2">Get the data</a>
-              </li>
-              <li>
-                <a href="#section-3">Find information about these statistics</a>
-              </li>
-              <li>
-                <a href="#section-4">Read more pages relating to crime</a>
-              </li>
-              <li>
-                <a href="#section-5">Contact us</a>
+                <a href="#section-2">Download collection</a>
               </li>
             </ul>
           </div>
