--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -108,22 +108,19 @@ title: "Fraud in England and Wales: year ending December 2017"
               </li>
             </ul>
 
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">More pages related to crime:</h2>
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#section-1">Key findings for weapons crime</a>
+                <a href="../crime-overview">Crime overview</a>
               </li>
               <li>
-                <a href="#section-2">Get the data</a>
+                <a class="font-weight--bold" href="../fraud">Fraud</a>
               </li>
               <li>
-                <a href="#section-3">Find information about these statistics</a>
+                <a href="../violent-crime">Violent crime</a>
               </li>
               <li>
-                <a href="#section-4">Read more pages relating to crime</a>
-              </li>
-              <li>
-                <a href="#section-5">Contact us</a>
+                <a href="../weapons-crime">Weapons crime</a>
               </li>
             </ul>
           </div>
