--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Crime in England and Wales: year ending December 2017"
+title: "Crime overview: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -38,7 +38,7 @@ title: "Crime in England and Wales: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults in England and Wales. Also including data on crime experienced by children, and crimes against businesses and society.</p>
         </div>
       </div>
     </div>
@@ -64,8 +64,8 @@ title: "Crime in England and Wales: year ending December 2017"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col" id="analysis">
-          <h2>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</h2>
-          <p class="font-xsmall">England and Wales, year ending December 1981 to year ending December 2017</p>
+          <h2>No change in fraud offences in the last year, following four years of rises</h2>
+          <p class="font-xsmall">England and Wales, year ending March 2012 to year ending December 2017</p>
         </div>
       </div>
     </div>
