--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Violent Crime in England and Wales: year ending December 2017"
+title: "Violent Crime: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -21,7 +21,7 @@ title: "Violent Crime in England and Wales: year ending December 2017"
                   <a class="breadcrumb__link astral-link" href="../collection">Crime collection</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Violent Crime in England and Wales
+                  Violent Crime
                 </li>
               </ol>
             </div>
@@ -51,8 +51,8 @@ title: "Violent Crime in England and Wales: year ending December 2017"
             <span class="font-weight--bold">Release date:</span> 26 April 2018
             <br /> <span class="font-weight--bold">Next release:</span> 19 July 2018 (provisional)
             <br /></P>
-            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest release</span> | <a class="font-color--white font-xsmall astral-link" href="../collection">View all pages in this release</a> or
-            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">view previous releases</a>
+            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest collection</span> | <a class="font-color--white font-xsmall astral-link" href="../collection">View all pages in this collection</a> or
+            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">view previous collections</a>
         </div>
 
       </div>
@@ -88,41 +88,55 @@ title: "Violent Crime in England and Wales: year ending December 2017"
       <div class="col-wrap">
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
+          <div class="icon-box-small margin-top--3">
+            <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
+          </div>
           <div class="">
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Page contents:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#section-1">Key findings for weapons crime</a>
+                <a href="#analysis">Analysis</a>
               </li>
               <li>
-                <a href="#section-2">Get the data</a>
+                <a href="#data">Get the data</a>
               </li>
               <li>
-                <a href="#section-3">Find information about these statistics</a>
+                <a href="#need-to-know">How do we measure this?</a>
               </li>
               <li>
-                <a href="#section-4">Read more pages relating to crime</a>
+                <a href="#need-to-know">What do you need to know about these numbers?</a>
               </li>
               <li>
-                <a href="#section-5">Contact us</a>
+                <a href="#need-to-know">Glossary</a>
+              </li>
+              <li>
+                <a href="#more-pages">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#more-links">More links</a>
+              </li>
+              <li>
+                <a href="#contact">Contact us</a>
               </li>
             </ul>
 
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a href="../crime-overview">Crime overview</a>
+                <a class="font-weight--bold" href="../crime-overview">Crime overview</a>
               </li>
               <li>
                 <a href="../fraud">Fraud</a>
               </li>
               <li>
-                <a class="font-weight--bold"  href="../violent-crime">Violent crime</a>
+                <a href="../homicide">Homicide</a>
+              </li>
+              <li>
+                <a href="../violent-crime">Violent crime</a>
               </li>
               <li>
                 <a href="../weapons-crime">Weapons crime</a>
               </li>
-            </ul>
             </ul>
           </div>
         </div>
