nav anchor tags

--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -64,10 +64,10 @@ title: "Crime in England and Wales: year ending December 2017 collection"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Page contents:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#section-1">Summary pages</a>
+                <a href="#pages">Summary pages</a>
               </li>
               <li>
-                <a href="#section-2">Download collection</a>
+                <a href="#download">Download collection</a>
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@ title: "Crime in England and Wales: year ending December 2017 collection"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 class="margin-top--3">Summary pages in this collection</h2>
+          <h2 id="pages" class="margin-top--3">Summary pages in this collection</h2>
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></p>
@@ -99,9 +99,13 @@ title: "Crime in England and Wales: year ending December 2017 collection"
               </li>
             </ul>
 
-            <div class="content-box icon-box margin-top--7">
+            <div id="download" class="content-box icon-box margin-top--7">
               <i class="icon icon-pdf--dark"></i><p><a href="#">Download all pages in crime collection</a></p>
             </div>
+
+            <p class="margin-top--7">
+              <a href="#top">Back to top</a>
+            </p>
 
         </div>
       </div>
