--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -110,7 +110,7 @@ title: "Fraud: year ending December 2017"
                 <a href="#need-to-know">Glossary</a>
               </li>
               <li>
-                <a href="#more-pages">Read more pages relating to crime</a>
+                <a href="#more-pages">Read more pages relating to fraud</a>
               </li>
               <li>
                 <a href="#more-links">More links</a>
@@ -123,10 +123,10 @@ title: "Fraud: year ending December 2017"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a class="font-weight--bold" href="../crime-overview">Crime overview</a>
+                <a href="../crime-overview">Crime overview</a>
               </li>
               <li>
-                <a href="../fraud">Fraud</a>
+                <a class="font-weight--bold" href="../fraud">Fraud</a>
               </li>
               <li>
                 <a href="../homicide">Homicide</a>
