--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -110,7 +110,7 @@ title: "Weapons Crime: year ending December 2017"
                 <a href="#need-to-know">Glossary</a>
               </li>
               <li>
-                <a href="#more-pages">Read more pages relating to crime</a>
+                <a href="#more-pages">Read more pages relating to weapons crime</a>
               </li>
               <li>
                 <a href="#more-links">More links</a>
@@ -123,7 +123,7 @@ title: "Weapons Crime: year ending December 2017"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a class="font-weight--bold" href="../crime-overview">Crime overview</a>
+                <a href="../crime-overview">Crime overview</a>
               </li>
               <li>
                 <a href="../fraud">Fraud</a>
@@ -135,7 +135,7 @@ title: "Weapons Crime: year ending December 2017"
                 <a href="../violent-crime">Violent crime</a>
               </li>
               <li>
-                <a href="../weapons-crime">Weapons crime</a>
+                <a class="font-weight--bold" href="../weapons-crime">Weapons crime</a>
               </li>
             </ul>
           </div>
