--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Crime in England and Wales: year ending December 2017 collection"
+title: "Crime: year ending December 2017 collection"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -36,7 +36,7 @@ title: "Crime in England and Wales: year ending December 2017 collection"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--4">{{ page.title }}</h1>
-          <p>Est irure amet velit veniam nisi minim adipisicing fugiat fugiat id ad adipisicing consectetur sit culpa sit.</p>
+          <p>Crime in England and Wales .</p>
         </div>
       </div>
     </div>
