made snaphots includes and update all pages

--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -334,43 +334,13 @@ title: "Weapons Crime: year ending December 2017"
           <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
           <!-- snapshots -->
           <div class="flex-grid">
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
-                  <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../fraud">Fraud in England and Wales</a></h4>
-                  <p>No change in the volume of fraud offences in the last year</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
-                  <p>Little change in levels of violent crime in recent years.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
-              </div>
-            </div>
+            {% include snapshots/crime-overview-snapshot.html %}
+            {% include snapshots/fraud-snapshot.html %}
+          </div>
+          <div class="flex-grid margin-top--2">
+            {% include snapshots/homicide-snapshot.html %}
+            {% include snapshots/violent-crime-snapshot.html %}
+          </div>
 
           <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
