--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Crime: year ending December 2017 collection"
+title: "Crime collection: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -19,6 +19,9 @@ title: "Crime: year ending December 2017 collection"
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
                   <a class="breadcrumb__link astral-link" style="padding-right:4px;" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
+                </li>
+                <li class="breadcrumb__item">
+                  Crime collection: year ending December 2017
                 </li>
 
               </ol>
@@ -36,7 +39,7 @@ title: "Crime: year ending December 2017 collection"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--4">{{ page.title }}</h1>
-          <p>Crime in England and Wales .</p>
+          <p>A collection of pages summarising crime against households and adults in England and Wales, including crime experienced by children, and crimes against businesses and society.</p>
         </div>
       </div>
     </div>
@@ -61,7 +64,7 @@ title: "Crime: year ending December 2017 collection"
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
           <div class="">
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Page contents:</h2>
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
                 <a href="#pages">Summary pages</a>
@@ -78,29 +81,29 @@ title: "Crime: year ending December 2017 collection"
           <h2 id="pages" class="margin-top--3">Summary pages in this collection</h2>
             <ul class="list--neutral margin-top--4 padding-left--0">
               <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime overview</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
+                <p>Crime against households and adults in England and Wales. Also including data on crime experienced by children, and crimes against businesses and society.</p>
               </li>
               <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Attempted fraud and fraud offences involving a loss. Including cyber crime, computer misuse, false accounting, and banking and credit industry fraud.</p>
+                <p>Fraud offences involving a loss in England and Wales. Including attempted fraud, cyber crime, computer misuse, false accounting, and banking fraud.</p>
               </li>
               <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-small" href="../violent-crime">Violent crime</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Violent crime including minor assaults, harassment and psychological abuse, wounding, physical assault and death.</p>
+                <p>Violent crime in England and Wales, including minor assaults, harassment and psychological abuse, wounding, physical assault and death.</p>
               </li>
               <li class="margin-bottom--4">
-                <p class="margin-bottom--1"><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></p>
+                <p class="margin-bottom--1"><a class="heading-small" href="../weapons-crime">Weapons crime</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Crime involving knives, guns, and other types of weapon.</p>
+                <p>Weapons crime in England and Wales, involving knives, guns, and other types of weapon.</p>
               </li>
             </ul>
 
             <div id="download" class="content-box icon-box margin-top--7">
-              <i class="icon icon-pdf--dark"></i><p><a href="#">Download all pages in crime collection</a></p>
+              <i class="icon icon-pdf--dark"></i><p><a href="#">Download all pages in this {{ page.title }}</a> (PDF)</p>
             </div>
 
             <p class="margin-top--7">
