Shortened Fraud summary

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -38,7 +38,7 @@ title: "Fraud: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Attempted fraud and fraud offences involving a loss in England and Wales. Including cyber crime, computer misuse, false accounting, and banking and credit industry fraud.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Fraud offences involving a loss in England and Wales. Including attempted fraud, cyber crime, computer misuse, false accounting, and banking fraud.</p>
         </div>
       </div>
     </div>
