update links pattern html

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -362,17 +362,17 @@ title: "Fraud: year ending December 2017"
           </div>
           <!-- related links -->
 
-          <div id="more-links" class="margin-top--7">
-            <h2>Analysis of fraud</h2>
-            <div class="content-box">
-              <ul class="list--neutral margin-top--4">
-                <li>
-                  <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">Overview of fraud and computer misuse statistics</a></p>
-                  <p>Summary of the various sources of data for fraud and computer misuse and what these tell us about victims, circumstances and long-term trends.</p>
-                </li>
-              </ul>
-            </div>
+
+          <h2 id="more-links" class="margin-top--7">Analysis of fraud</h2>
+          <div class="content-box">
+            <ul class="list--neutral margin-top--4">
+              <li>
+                <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">Overview of fraud and computer misuse statistics</a></p>
+                <p>Summary of the various sources of data for fraud and computer misuse and what these tell us about victims, circumstances and long-term trends.</p>
+              </li>
+            </ul>
           </div>
+
 
           <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
