--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -174,26 +174,10 @@ title: "Homicide: year ending December 2017"
 
 
           <h2 id="data" class="margin-top--7">Get the data</h2>
-          <p class="list-heading">This page reports on data from: </p>
-          <ul>
-            <li>Crime Survey for England and Wales (CSEW)</li>
-            <li>National Fraud Intelligence Bureau (NFIB) which collates data from Action Fraud, Cifas and UK Finance</li>
-          </ul>
+          <p>This page mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
-
-          <details role="group" class="margin-bottom--4 margin-top--1">
-            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary">More information on the data sources</span>
-            </summary>
-            <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="list-heading">Consequat qui laborum irure:</p>
-              <ul>
-                <li>Section 5.4 of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a></li>
-                <li><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">The Overview of fraud and computer misuse statistics article</a></li>
-              </ul>
-            </div>
-          </details>
-
+          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
+          <p>The <a href="https://www.ons.gov.uk/redir/eyJhbGciOiJIUzI1NiJ9.eyJpbmRleCI6MSwicGFnZVNpemUiOjEwLCJwYWdlIjoxLCJ1cmkiOiIvcGVvcGxlcG9wdWxhdGlvbmFuZGNvbW11bml0eS9jcmltZWFuZGp1c3RpY2UvZGF0YXNldHMvYXBwZW5kaXh0YWJsZXNob21pY2lkZWluZW5nbGFuZGFuZHdhbGVzIiwibGlzdFR5cGUiOiJyZWxhdGVkZGF0YSJ9.ws97TwMa0gKVDp_h8A7RKJYdoXhdrM8iqdUU_4FKd2Y">Home Office Homicide Index</a> is a separate source of data on homicide in England and Wales. It is published annually, and is a richer source of data than the police recorded crime figures used on this page.</p>
           <h2 id="need-to-know" class="margin-top--7">Information about these statistics</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
