update nav slected state

--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -132,10 +132,10 @@ title: "Homicide: year ending December 2017"
                 <a href="../crime-overview">Crime overview</a>
               </li>
               <li>
-                <a class="font-weight--bold" href="../fraud">Fraud</a>
+                <a href="../fraud">Fraud</a>
               </li>
               <li>
-                <a href="../homicide">Homicide</a>
+                <a class="font-weight--bold" href="../homicide">Homicide</a>
               </li>
               <li>
                 <a href="../violent-crime">Violent crime</a>
