--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -186,7 +186,7 @@ title: "Homicide: year ending December 2017"
                   How do we measure this?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>This page is part of our quarterly <a href="https://bulletin-26.netlify.com/sprint/29/release-pages">Crime Collection</a>, which relies on two main sources of data.</p>
+                <p>This page is part of our quarterly <a href="../collection">Crime Collection</a>, which relies on two main sources of data.</p>
 
                 <p><strong>Crime Survey of England and Wales</strong></br>
                 The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</p>
