--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -220,8 +220,8 @@ title: "Homicide: year ending December 2017"
                 <p><strong>Time periods covered</strong></br>
                 The Crime Survey for England and Wales data on this page are based on interviews conducted between January 2017 and December 2017, measuring peoples’ experiences of crime in the 12 months before the interview.</p>
                 <p>The police recorded crime figures relate to crimes recorded by the police during the year ending December 2017 (between January 2017 and December 2017).</p>
-                <p>“Latest year” (or “latest survey year”) refers to the (survey) year ending December 2017</br>
-                “previous year” (or “previous survey year”) refers to the (survey) year ending December 2016.</p>
+                <p>“Latest year” (or “latest survey year”) refers to the (survey) year ending December 2017.</br>
+                “Previous year” (or “previous survey year”) refers to the (survey) year ending December 2016.</p>
 
                 <p><strong>Using the Home Office Homicide Index</strong></br>
                 Home Office Homicide Index data will differ from the police recorded data used on this page.</p>
