--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -92,28 +92,31 @@ title: "Fraud: year ending December 2017"
             <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
           </div>
           <div class="">
-            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Page contents:</h2>
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#analysis">Analysis</a>
+                <a href="#analysis">Analysis of fraud</a>
               </li>
               <li>
-                <a href="#data">Get the data</a>
+                <a href="#data">Get fraud data</a>
               </li>
               <li>
-                <a href="#need-to-know">How do we measure this?</a>
+                <a href="#using-data">How do we measure this?</a>
               </li>
               <li>
-                <a href="#need-to-know">What do you need to know about these numbers?</a>
+                <a href="#using-data">What do you need to know?</a>
               </li>
               <li>
-                <a href="#need-to-know">Glossary</a>
+                <a href="#using-data">Glossary</a>
               </li>
               <li>
-                <a href="#more-pages">Read more pages relating to fraud</a>
+                <a href="#more-pages">More pages in this collection</a>
               </li>
               <li>
-                <a href="#more-links">More links</a>
+                <a href="#more-about">More about fraud</a>
+              </li>
+              <li>
+                <a href="#more-links">You may also be interested in</a>
               </li>
               <li>
                 <a href="#contact">Contact us</a>
