--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -60,7 +60,7 @@ title: "Fraud: year ending December 2017"
   </div>
 
   <!-- grey banner -->
-  <div class="page-intro background--gallery">
+  <div id="analysis" class="page-intro background--gallery">
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
@@ -146,7 +146,6 @@ title: "Fraud: year ending December 2017"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <!-- <h2 id="main-findings" class="margin-top--3">Main findings for fraud</h2> -->
           <p class="heading-small">All main sources of fraud data suggest no increase</p>
           <p>3.2 million fraud offences were measured by the Crime Survey for England and Wales (CSEW). This has not increased from the results of last year’s survey.</p>
           <p>The Crime Survey for England and Wales (CSEW) provides the best indication of the volume of fraud offences directly experienced by individuals in England and Wales. CSEW estimates cover a wide range of fraud offences, including attempts and offences involving a loss, and include incidents not reported to the authorities.</p>
@@ -277,7 +276,7 @@ title: "Fraud: year ending December 2017"
             </div>
           </details>
 
-          <h2 id="need-to-know" class="margin-top--7">Using fraud data</h2>
+          <h2 id="using-data" class="margin-top--7">Using fraud data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -366,7 +365,7 @@ title: "Fraud: year ending December 2017"
           <!-- related links -->
 
 
-          <h2 id="more-links" class="margin-top--7">More about fraud</h2>
+          <h2 id="more-about" class="margin-top--7">More about fraud</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
