--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -60,7 +60,7 @@ title: "Homicide: year ending December 2017"
   </div>
 
   <!-- grey banner -->
-  <div class="page-intro background--gallery">
+  <div id="analysis" class="page-intro background--gallery">
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
@@ -149,7 +149,6 @@ title: "Homicide: year ending December 2017"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <!-- <h2 id="main-findings" class="margin-top--3">Main findings for fraud</h2> -->
           <p class="heading-small">Three-year rise in homicides continues</p>
           <p>Latest police recorded figures show that there were 54 more homicides than the previous year, a 9% increase, to 653.</p>
           <div class="content-box highlight">
@@ -178,7 +177,9 @@ title: "Homicide: year ending December 2017"
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
           <p>The <a href="https://www.ons.gov.uk/redir/eyJhbGciOiJIUzI1NiJ9.eyJpbmRleCI6MSwicGFnZVNpemUiOjEwLCJwYWdlIjoxLCJ1cmkiOiIvcGVvcGxlcG9wdWxhdGlvbmFuZGNvbW11bml0eS9jcmltZWFuZGp1c3RpY2UvZGF0YXNldHMvYXBwZW5kaXh0YWJsZXNob21pY2lkZWluZW5nbGFuZGFuZHdhbGVzIiwibGlzdFR5cGUiOiJyZWxhdGVkZGF0YSJ9.ws97TwMa0gKVDp_h8A7RKJYdoXhdrM8iqdUU_4FKd2Y">Home Office Homicide Index</a> is a separate source of data on homicide in England and Wales. It is published annually, and is a richer source of data than the police recorded crime figures used on this page.</p>
-          <h2 id="need-to-know" class="margin-top--7">Using homicide data</h2>
+
+
+          <h2 id="using-data" class="margin-top--7">Using homicide data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -275,7 +276,7 @@ title: "Homicide: year ending December 2017"
           <!-- related links -->
 
 
-          <h2 id="more-links" class="margin-top--7">More about homicide</h2>
+          <h2 id="more-about" class="margin-top--7">More about homicide</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
