--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -60,7 +60,7 @@ title: "Weapons Crime: year ending December 2017"
   </div>
 
   <!-- grey banner -->
-  <div class="page-intro background--gallery">
+  <div id="analysis" class="page-intro background--gallery">
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
@@ -237,7 +237,7 @@ title: "Weapons Crime: year ending December 2017"
           </details>
 
 
-          <h2 id="info-about-stats" class="margin-top--7">Using weapons crime data</h2>
+          <h2 id="using-data" class="margin-top--7">Using weapons crime data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
@@ -329,7 +329,7 @@ title: "Weapons Crime: year ending December 2017"
           </div>
 
 
-          <h2 id="release-pages" class="margin-top--7">More pages in this collection</h2>
+          <h2 id="more-pages" class="margin-top--7">More pages in this collection</h2>
           <!-- snapshots -->
           <div class="flex-grid">
             {% include snapshots/crime-overview-snapshot.html %}
@@ -343,7 +343,7 @@ title: "Weapons Crime: year ending December 2017"
           <!-- related links -->
 
 
-          <h2 id="more-links" class="margin-top--7">More about weapons crime</h2>
+          <h2 id="more-about" class="margin-top--7">More about weapons crime</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
