--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -38,7 +38,7 @@ title: "Crime overview: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults in England and Wales. Also including data on crime experienced by children, and crimes against businesses and society.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Crime against households and adults in England and Wales. Including data on crime experienced by children, and crimes against businesses and society.</p>
         </div>
       </div>
     </div>
