--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -91,6 +91,11 @@ title: "Crime collection: year ending December 2017"
                 <p>Fraud offences involving a loss in England and Wales. Including attempted fraud, cyber crime, computer misuse, false accounting, and banking fraud.</p>
               </li>
               <li class="margin-bottom--4">
+                <p class="margin-bottom--1"><a class="heading-small" href="../homicide">Homicide</a></p>
+                <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
+                <p>Homicide in England and Wales, including murder, manslaughter, corporate manslaughter and infanticide.</p>
+              </li>
+              <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../violent-crime">Violent crime</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
                 <p>Violent crime in England and Wales, including minor assaults, harassment and psychological abuse, wounding, physical assault and death.</p>
