--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -83,7 +83,7 @@ title: "Crime collection: year ending December 2017"
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../crime-overview">Crime overview</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Crime against households and adults in England and Wales. Also including data on crime experienced by children, and crimes against businesses and society.</p>
+                <p>Crimes against households, adults, children, businesses and society in England and Wales.</p>
               </li>
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud</a></p>
