Delete line break

--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -153,7 +153,7 @@ title: "Crime overview: year ending December 2017"
           <p class="heading-small">Crime overall has fallen in the last year</p>
           <p>Crime estimated by the Crime Survey for England and Wales (CSEW) shows crime overall has fallen in the last year, driven by a 28% decline in computer misuse.</p>
           <p>Most individual types of crime, including violence, have stayed at levels similar to the previous year.</p>
-          <p>When looking at the main types of crime, changes were only seen in:</p>
+          <p class="list-heading">When looking at the main types of crime, changes were only seen in:</p>
           <ul>
             <li>computer misuse offences (28% decrease to 1.37 million offences), which drove the fall in overall CSEW crime</li>
             <li>vehicle-related thefts (17% increase to 929,000 offences)</li>
@@ -167,7 +167,7 @@ title: "Crime overview: year ending December 2017"
           <div class="content-box highlight">
             <p>Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices and victims’ willingness to report crime.</p>
           </div>
-          <p>The police figures indicate rises in the following types of crime:</p>
+          <p class="list-heading">The police figures indicate rises in the following types of crime:</p>
           <ul>
             <li>offences involving knives or sharp instrument (up 22% to 39,598 recorded offences)</li>
             <li>offences involving firearms (up 11% to 6,604 recorded offences)</li>
@@ -175,7 +175,7 @@ title: "Crime overview: year ending December 2017"
           <p>These offences tend to be disproportionately concentrated in London and other metropolitan areas; however, the majority of police force areas saw rises in these types of violent crime.</p>
 
           <p class="heading-small">More homicides, burglaries and robberies reported</p>
-          <p>Police recorded crime showed rises in:</p>
+          <p class="list-heading">Police recorded crime showed rises in:</p>
           <ul>
             <li>burglary, which increased by 9% (up to 438,971 offences)</li>
             <li>robbery (up 33% to 74,130 offences)</li>
@@ -216,7 +216,7 @@ title: "Crime overview: year ending December 2017"
                 The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</p>
 
                 <p><strong>Police recorded crime</strong></br>
-                  <p>Police recorded crime is crime that has been reported to the police, and recorded as part of police casework.</p>
+                  Police recorded crime is crime that has been reported to the police, and recorded as part of police casework.</p>
                   <div class="content-box highlight">
                     <p>Police recorded crime data are not designated as National Statistics.</p>
                   </div>
